--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "goit-react-hw-01-components",
-  "homepage": "https://github.com/Qseboy/goit-react-hw-01-components",
+  "homepage": "https://Qseboy.github.io/goit-react-hw-01-components",
   "version": "0.2.0",
   "private": true,
   "dependencies": {
